--- a/these.tex
+++ b/these.tex
@@ -35,10 +35,10 @@ Ex.: Contribution \`a la conception \`a bas co\^ut d'antennes 3D\dots}
 \include{chapter3/chapter3}
 \include{chapter4/chapter4}
 \include{chapter5/chapter5}
-\include{chapter6/chapter6}
-\include{chapter7/chapter7}
-\include{chapter8/chapter8}
-\include{chapter9/chapter9}
+% \include{chapter6/chapter6}
+% \include{chapter7/chapter7}
+% \include{chapter8/chapter8}
+% \include{chapter9/chapter9}
 
 
 \end{document}
